Fix table overflow issue

--- a/pyforms_web/web/static/pyforms.css
+++ b/pyforms_web/web/static/pyforms.css
@@ -124,7 +124,6 @@ h3.subtitle {
 }
 
 .pyforms-segment{
-    overflow-x: auto;
 }
 
 .pyforms-segment > .field{
